# ved

./: .gitmodules  CMakeLists.txt
cmake/: FFMpeg.cmake
include/: gltools.h  logging.h  shaders.h
include/codec/: codec.h
include/core/: application.h  event.h  io.h  media_file.h  media_server.h  media_sink.h  media_source.h  render_session.h  sync_media_source.h  time.h  timeline.h  video_composer.h  video_properties.h  video_renderer.h  workspace.h  workspace_properties.h
include/ffmpeg/: frame_converter.h  headers.h  io.h  media_file_handle.h  media_sink.h  media_source.h  media_stream.h  video_reader.h
include/ui/: helpers.h  import_widget.h  main_window.h  preview_widget.h  render_widget.h  timeline_widget.h  widget.h  widget_ids.h  workspace_properties_widget.h
src/: logging.cpp  main.cpp
src/codec/: avc.cpp  vp8.cpp  vp9.cpp
src/core/: application.cpp  media_server.cpp  render_session.cpp  sync_media_source.cpp  timeline.cpp  video_composer.cpp  video_renderer.cpp  workspace.cpp
src/ffmpeg/: frame_converter.cpp  io.cpp  media_sink.cpp  media_source.cpp
src/ui/: helpers.cpp  import_widget.cpp  main_window.cpp  preview_widget.cpp  render_widget.cpp  timeline_widget.cpp  workspace_properties_widget.cpp
